# map-segmentation-frontend

./: .gitignore  Cargo.toml  index.html  mock-backend.py
.cargo/: config.toml
src/: main.rs
