[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
gloo = "0.10.0"
image = "0.24.7"
js-sys = "0.3.65"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = ["DataTransfer", "DragEvent"] }
yew = { version = "0.21.0", features = ["csr"] }
